# BUILD-website

./: .env.example  .eslintrc.cjs  .gitignore  ADMIN_DASHBOARD.md  README.md  docker-compose.yml  next.config.ts  package-lock.json  package.json  tailwind.config.ts
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  start.sh
backend/app/: config.py  dependencies.py  logging.py  main.py
backend/app/db/: base.py  dev.db
backend/app/db/backend/app/db/: dev.db
backend/app/db/models/: contact.py  email.py  lead.py  organization.py
backend/app/db/schemas/: health.py  schema.prisma
backend/app/routers/: email.py  health.py
backend/app/scraping/: base.py
backend/app/security/: auth_jwt.py
backend/app/services/: outreach.py  scoring.py
backend/app/workers/: queue.py
backend/app/workers/jobs/: send_email.py
backend/build_finder_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_health.py
database/db/models/: product-manager-application.ts  software-developer-application.ts  waitlist-member.ts
frontend/: .env.example  Dockerfile  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
frontend/.next/: build-manifest.json  prerender-manifest.json  trace
frontend/src/: App.tsx
prisma/: schema.prisma
src/components/: Footer.tsx  JumbotronHeader.tsx  ProjectCard.module.css  ProjectModal.tsx
src/content/: nav.ts  projects.ts
src/data/: users.ts
src/pages/: _app.tsx  about.tsx  admin.tsx  apply.tsx  contact.tsx  index.tsx  projects.tsx  services.tsx
src/styles/: globals.css
(+121 files in other folders)
