[project]
name = "build-finder-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "SQLAlchemy>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "redis>=5.0",
  "rq>=1.16",
  "httpx>=0.27",
  "beautifulsoup4>=4.12",
  "jinja2>=3.1",
  "tenacity>=8.5",
  "python-slugify>=8.0",
  "structlog>=24.1"
]

[project.optional-dependencies]
dev = ["ruff>=0.5","black>=24.8.0","mypy>=1.10.0","pytest>=8.2","pytest-asyncio>=0.23","testcontainers[postgres]>=4.8"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E","F","I","UP","B","C90"]
ignore = ["E203","E501"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
strict_optional = true
